  o Graphical arguments in the qgraph help page have been grouped in subcatagories.
  o Added the 'edge.width' argument that scales both 'esize' and 'asize'. Making it easier to make both edges and arrows larger.
  o Added 'node.width' and 'node.height' arguments that scales 'vsize' and 'vsize2'.
  o Fixed a bug where edge labels could not be assigned using a matrix.
  o BDgraph is now supported.

Changes in Version 1.2.3
  o Maintainer e-mail changed to mail@sachaepskamp.com to be in line with other packages maintained by me

  o Major changes:
    o centrality() now also makes weights positive in computing in and out degree
    o bnlearn and bn.strength classes are now supported
    o Added edge.label.position argument. If an edge has a label its source is now rescaled when its destination is rescaled to keep the middle of the edge correctly

  o Minor changes:
    o Graphs now only default to unweighted if all entries are either 0 or 1
    o residScale is now normalized
    o border width can now be varied per node
    o Evaluation of subplots now uses the global environment for lookups
    o The 'labels' argument can now be used with pcalg input
    o Background color can now be transparent
    o Added subpars argument to pass 'par' arguments to sublots
    o Added argument 'subplotbg' to control the background of subplots
    o numeric edge labels now converted to characters
    o Centering with aspect is TRUE now only looks at the range of x and y coordinates, placing the graph more to the center
    o Self-loops are now removed in centrality()
    o Machine tolerance is now taken into account when testing if an input matrix is symmetrical. Because of this, correlation matrices computed with cov2cor no longer need to be rounded
    o If the par("bg") color is "transparent" the background is set to "white" instead of "transparent"
    o filetype argument no longer supports 'x11'

  o Bug fixes:
    o Edge labels of '' will now not plot a background.